Correction taille police paragraphe et contraste icone reseaux sociaux

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: #575757;
 }
 
 .d-bloc .a-btn:hover,
@@ -677,7 +677,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -753,7 +753,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: #61573c;
     padding: 40px 40px 40px 40px;
 }
 
@@ -852,6 +852,10 @@ h4 {
 .link{
     color: blue !important;
     text-decoration: underline;
+}
+
+.text_grow{
+    font-size: 16px;
 }
 
 @media (max-width: 1024px) {
